2004-12-09  Ian Lance Taylor  <ian@wasabisystems.com>

	* config/tc-mips.c (append_insn): If we emit a nop during a relax
	sequence, increase the size of the sequence.

	* config/tc-mips.c (mips_cpu_info_table): Change "9000" entry to
	use CPU_RM9000.

2004-12-07  Ben Elliston  <bje@gnu.org>

	* read.c (s_align): Use an align_limit temporary to allay a GCC
	signed/unsigned comparison warning.

2004-12-01  Mark Mitchell  <mark@codesourcery.com>

	* Makefile.am (TARG_ENV_HFILES): Add te-armlinuxeabi.h.
	* configure.in: Use it for arm*-*-linux-gnueabi*.
	* config/tc-arm.c: Allow emulation file to set FPU_DEFAULT.
	* config/te-armlinuxeabi.h: New file.
	* Makefile.in: Regenerated.
	* aclocal.m4: Likewise.
	* configure: Likewise.
	* doc/Makefile.in: Regenerated. 

2004-12-02  Bob Wilson  <bob.wilson@acm.org>

	* config/tc-xtensa.c (xtensa_switch_section_emit_state): Use subseg_set.
	(xtensa_restore_emit_state): Likewise.

2004-12-02  Alan Modra  <amodra@bigpond.net.au>

	* read.c (ALIGN_LIMIT): Define, increasing limit for BFD_ASSEMBLER.
	(s_align): Use it.

2004-11-30  Tero Niemela  <tero_niemela@yahoo.com>

	* Makefile.am: Change LOCALEDIR to $(datadir)/share.
	* Makefile.in: Regenerate.

2004-11-29  Tomer Levi  <Tomer.Levi@nsc.com>

	* config/tc-crx.c: Major code cleanup. Remove unused variables and
	functions, give functions a meaningful name, add comments.
	(check_range): New function - Replace operand size calculation
	with range checking.
	(assemble_insn): Update Algorithm, improve error issuing.
	(enum op_err): New.
	(process_label_constant): Bug fix regarding COP_BRANCH_INS relocation
	handling.

2004-11-29  Kazuhiro Inaoka <inaoka.kazuhiro@renesas.com>

	* config/tc-m32r.c (md_pcrel_from_section): Fixed a pcrel relocte
	miss between different section in the same module.
	(tc_gen_reloc): Likewise.

2004-11-25  Theodore A. Roth  <troth@openavr.org>

	* gas/config/tc-avr.c (mcu_types): Add support for atmega165,
	atmega325, atmega3250, atmega645 and atmega6450.
